codex-rs/tui_app_server/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_snapshot_basic.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
"/ 会 话 记 录 / / / / / / / / / / / / / " Hidden by multi-width symbols: [(3, " "), (6, " "), (9, " "), (12, " ")]
"alpha                                   "
"                                        "
"beta                                    "
"                                        "
"gamma                                   "
"───────────────────────────────── 100% ─"
" ↑/↓ 滚动   pgup/pgdn 翻页   home/end 跳" Hidden by multi-width symbols: [(6, " "), (8, " "), (23, " "), (25, " "), (39, " ")]
" q 退出   esc 编辑上一条                " Hidden by multi-width symbols: [(4, " "), (6, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " ")]
"                                        "
